Resolves: tdf#90099 group new style and change style together as one undo

Change-Id: I978f503fabce69bb08a892c47d07ff8fa43c73b5